# pecnv

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README.md  bwa_bam_to_mapfiles2.cc  bwa_mapdistance.cc  bwa_util.cc  bwa_util.hpp  cluster_cnv2.cc  config-h.in  config-h.in.in  config.h.in  configure  configure.ac  fastq_to_table.cc  file_util.cc  file_util.hpp  filter_edit.cc  get_pair_ids_bwa.cc  gridify.pl  install2home.sh  isbinary.cc  mquant.R  pecnv.pl  pecnv.sh  processRef.pl  process_readmappings.cc  rename_reference.cc  run_test_data.sh  run_test_dataHPC.sh  string_unsigned_lookup.cc  teclust.cc  umm_te_finder.cc
scripts/: Makefile.am  Makefile.in  pecnv.sh  pecnv_insert_qtile
src/: Makefile  Makefile.am  Makefile.in  bwa_bam_to_mapfiles2.cc  bwa_mapdistance.cc  bwa_util.hpp  cluster_cnv.hpp  cluster_cnv2.cc  common.cc  common.hpp  fastq_to_table.cc  file_common.cc  file_common.hpp  file_util.cc  filter_edit.cc  htslibUtils.cc  htslibUtils.hpp  intermediateIO.cc  intermediateIO.hpp  isbinary.hpp  mdist.hpp  mkgenome.cc  mkgenome.hpp  pecnv.cc  pecnv_version.hpp  process_readmappings.cc  process_readmappings.hpp  string_unsigned_lookup.cc  string_unsigned_lookup.hpp  teclust.cc  teclust.hpp  teclust_objects.cc  teclust_objects.hpp  teclust_parseargs.cc  teclust_parseargs.hpp  teclust_phrapify.cc  teclust_phrapify.hpp  teclust_scan_bamfile.cc  teclust_scan_bamfile.hpp  umm_te_finder.cc
test/: README.md  TEsThreeWays.sh  TEvariationsOnTheme.sh  checkTEoutput.R  reformatForR.sh  run_TEtest_data.sh  run_test_data.sh  run_test_dataHPC.sh
